--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>The Boiled Frog</title>
+		<title>Junk Name</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
