--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="www.boiledfrog.ca">The Bolied Frog<span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="www.boiledfrog.ca">Bolied Frog</a></div>
+				<div class="tagline">“There are two ways to be fooled. One is to believe what isn't true; the other is to refuse to believe what is true.”</div>
 				<a href="#menu">Menu</a>
 			</header>
 
