--- a/templated-hielo/index.html
+++ b/templated-hielo/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Boiled Frog - Climate Change Awareness and Strategy
-	Ian D James
+	Hielo by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
 	<head>
-		<title>Boiled Frog Website</title>
+		<title>Hielo by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="www.boiledfrog.ca">Boiled Frog</a></div>
+				<div class="logo"><a href="index.html">Hielo <span>by TEMPLATED</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -33,8 +34,8 @@
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Is Climate Change Denial Criminal?</p>
-							<h2>Rising Temperatures</h2>
+							<p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p>
+							<h2>Hielo</h2>
 						</header>
 					</div>
 				</article>
@@ -42,8 +43,8 @@
 					<img src="images/slide02.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>Is Climate Change Denial Criminal?</p>
-							<h2>Melting Glaciers</h2>
+							<p>Lorem ipsum dolor sit amet nullam feugiat</p>
+							<h2>Magna etiam</h2>
 						</header>
 					</div>
 				</article>
@@ -51,8 +52,8 @@
 					<img src="images/slide03.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Is Climate Change Denial Criminal?</p>
-							<h2>Rising Sea Levels</h2>
+							<p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
+							<h2>Tempus dolor</h2>
 						</header>
 					</div>
 				</article>
@@ -60,8 +61,8 @@
 					<img src="images/slide04.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Is Climate Change Denial Criminal?</p>
-							<h2>Ocean Heat Content</h2>
+							<p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
+							<h2>Etiam feugiat</h2>
 						</header>
 					</div>
 				</article>
@@ -69,8 +70,8 @@
 					<img src="images/slide05.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Is Climate Change Denial Criminal?</p>
-							<h2>Wild Fires</h2>
+							<p>Ipsum dolor sed magna veroeros lorem ipsum</p>
+							<h2>Lorem adipiscing</h2>
 						</header>
 					</div>
 				</article>
