--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Boiled Frog - Climate Change Awareness and Strategy
-	Ian D James
+	Does wilful ignorance constitute criminal behavior
 -->
 <html>
 	<head>
@@ -14,8 +14,9 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="www.boiledfrog.ca">Boiled Frog</a></div>
+				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a></div>
 				<a href="#menu">Menu</a>
+				<div class="tagline">Tag Line</div>
 			</header>
 
 		<!-- Nav -->
