--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a></div>
+				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a><span class="tagline">&nbsp;&nbsp;“There are two ways to be fooled. One is to believe what isn't true; the other is to refuse to believe what is true.”</span></div>
 				<a href="#menu">Menu</a>
-				<div class="tagline">Tag Line</div>
 			</header>
 
 		<!-- Nav -->
