--- a/generic.html
+++ b/generic.html
@@ -31,8 +31,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Eleifend vitae urna</p>
-						<h2>Generic Page Template</h2>
+						<p>Time is of the Essence</p>
+						<h2>Moving Beyond the Argument</h2>
 					</header>
 				</div>
 			</section>
