--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a><span class="tagline">&nbsp;&nbsp;“There are two ways to be fooled. One is to believe what isn't true; the other is to refuse to believe what is true.”</span></div>
+				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a><span class="tagline">&nbsp;&nbsp;“The hardest thing to explain is the glaringly evident which everybody has decided not to see.” ― Ayn Rand</span></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -39,7 +39,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide02.jpg" alt="" />
+					<img src="images/glaciers-1.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -88,10 +88,10 @@
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>maecenas sapien feugiat ex purus</p>
-										<h2>Lorem ipsum dolor</h2>
+										<p>Time is of the essence</p>
+										<h2>Moving Beyond the Argument</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p>I have been impressed with the urgency of doing. Knowing is not enough. We must apply. Being willing is not enough. We must do. - Leonardo da Vinci</p>
 									<footer class="align-center">
 										<a href="#" class="button alt">Learn More</a>
 									</footer>
@@ -102,14 +102,14 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/wild-fires-1.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>mattis elementum sapien pretium tellus</p>
-										<h2>Vestibulum sit amet</h2>
+										<p>Criminality</p>
+										<h2>Wilful Scientific Ignorance</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p>It's about the climate-change "denial industry", ...we should have war crimes trials for these bastards - some sort of climate Nuremberg. - David Roberts</p>
 									<footer class="align-center">
 										<a href="#" class="button alt">Learn More</a>
 									</footer>
@@ -125,8 +125,8 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p></p>
+						<h2>Wiful Ignorance</h2>“There are two ways to be fooled. One is to believe what isn't true; the other is to refuse to believe what is true.”
 					</header>
 				</div>
 			</section>
@@ -168,14 +168,14 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="http://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="http://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="http://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="http://boiledfrog.ca" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Boiled Frog &#9400;2019 All rights reserved.
 				</div>
 			</footer>
 
