--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/slide01.jpg" alt="" />
+					<img src="images/banner-1.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -39,7 +39,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/glaciers-1.jpg" alt="" />
+					<img src="images/banner-2.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -48,7 +48,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide03.jpg"  alt="" />
+					<img src="images/banner-3.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -57,7 +57,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide04.jpg"  alt="" />
+					<img src="images/banner-4.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -66,7 +66,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide05.jpg"  alt="" />
+					<img src="images/banner-5.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -84,7 +84,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/no-time-1.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -102,7 +102,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/wild-fires-1.jpg" alt="" />
+									<img src="images/culpability-1.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -135,8 +135,8 @@
 			<section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
-						<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p class="special">"Don't raise your voice, improve your argument"<br />Desmond Tutu</p>
+						<h2>Climate Change Resources</h2>
 					</header>
 					<div class="gallery">
 						<div>
