--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="moving-on.html">Moving on</a></li>
+					<li><a href="criminality.html">Criminality</a></li>
 				</ul>
 			</nav>
 
@@ -93,7 +93,7 @@
 									</header>
 									<p>I have been impressed with the urgency of doing. Knowing is not enough. We must apply. Being willing is not enough. We must do. - Leonardo da Vinci</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="moving-on.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -111,7 +111,7 @@
 									</header>
 									<p>It's about the climate-change "denial industry", ...we should have war crimes trials for these bastards - some sort of climate Nuremberg. - David Roberts</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="criminality.html" class="button alt">Learn More</a>
 									</footer>
 								</div>
 							</div>
@@ -141,22 +141,22 @@
 					<div class="gallery">
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
+								<a target="_blank" href="https://climate.nasa.gov/evidence"><img src="images/website-4.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
+								<a target="_blank" href="http://www.climatecentral.org/"><img src="images/website-2.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
+								<a target="_blank" href="https://www.skepticalscience.com/"><img src="images/website-3.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
+								<a target="_blank" href="https://royalsociety.org/~/media/Royal_Society_Content/policy/projects/climate-evidence-causes/climate-change-evidence-causes.pdf"><img src="images/document-1.jpg" alt="" /></a>
 							</div>
 						</div>
 					</div>
