--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/banner-1.jpg" alt="" />
+					<img src="images/banner-1.jpg" alt="Desertification" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -42,7 +42,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/banner-2.jpg" alt="" />
+					<img src="images/banner-2.jpg" alt="Arctic and Antarctic Glacial Melt" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -51,7 +51,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/banner-3.jpg"  alt="" />
+					<img src="images/banner-3.jpg"  alt="Rising Sea Levels and Flooding" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -60,7 +60,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/banner-4.jpg"  alt="" />
+					<img src="images/banner-4.jpg"  alt="Extreme Weather - Hurricanes and Tornados" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -69,7 +69,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/banner-5.jpg"  alt="" />
+					<img src="images/banner-5.jpg"  alt="Wild Fires" />
 					<div class="inner">
 						<header>
 							<p>Is Climate Change Denial Criminal?</p>
@@ -87,7 +87,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/no-time-1.jpg" alt="" />
+									<img src="images/no-time-1.jpg" alt="Time Running Out" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -105,7 +105,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/culpability-1.jpg" alt="" />
+									<img src="images/culpability-1.jpg" alt="Wilful Ignorance and Criminality" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -144,17 +144,17 @@
 					<div class="gallery">
 						<div>
 							<div class="image fit">
-								<a target="_blank" href="https://climate.nasa.gov/evidence"><img src="images/website-4.jpg" alt="" /></a>
+								<a target="_blank" href="https://climate.nasa.gov/evidence"><img src="images/website-4.jpg" alt="NASA Climate Change Website" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a target="_blank" href="http://www.climatecentral.org/"><img src="images/website-2.jpg" alt="" /></a>
+								<a target="_blank" href="http://www.climatecentral.org/"><img src="images/website-2.jpg" alt="Climate Central Website" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a target="_blank" href="https://www.skepticalscience.com/"><img src="images/website-3.jpg" alt="" /></a>
+								<a target="_blank" href="https://www.skepticalscience.com/"><img src="images/website-3.jpg" alt="Skeptical Science Website" /></a>
 							</div>
 						</div>
 						<div>
