--- a/criminality.html
+++ b/criminality.html
@@ -5,8 +5,11 @@
 -->
 <html>
 	<head>
-		<title>Boiled Frog</title>
+ />		<title>Boiled Frog</title>
+		<meta name="description" content="Climate Change Criminality">
+		<meta name="author" content="Ian James">
 		<meta charset="utf-8" />
+		<meta name="keywords" content="environment, climate, change, global, warming, greenhouse, enhanced, effect, accountability, criminality, cuplability, IPCC, NASA">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
