--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
+					<li><a href="resisting-change.html">Resisting change</a></li>
 					<li><a href="moving-on.html">Moving on</a></li>
+					<li><a href="accountability.html">Accountability</a></li>
+					<li><a href="liability.html">Liability</a></li>
 					<li><a href="criminality.html">Criminality</a></li>
 				</ul>
 			</nav>
@@ -174,7 +177,7 @@
 						<li><a href="http://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="http://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="http://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="mailto:admin@boiledfrog.ca?Subject=Hello%20again" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="mailto:admin@boiledfrog.ca?Subject=Boiled Frog" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
