--- a/moving-on.html
+++ b/moving-on.html
@@ -25,7 +25,6 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="resisting-change.html">Resisting change</a></li>
 					<li><a href="moving-on.html">Moving on</a></li>
 					<li><a href="accountability.html">Accountability</a></li>
 					<li><a href="liability.html">Liability</a></li>
@@ -52,12 +51,45 @@
 								<p>Albert Einstein</p>
 								<h2>Those who have the privilege to know have the duty to act</h2>
 							</header>
-							<p>Coming soon.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
+							<p>The boiled frog story is a cautionary fable that warns us of the risks that arise when we choose to 
+							   ignore or deny change. Like the ostrich, we can choose to bury our heads in the sand, ignore change, 
+							   deny the evidence, and thereby place ourselves in peril.</p>
+							<p>Change can be rapid and obvious or it can be slow and subtle. The following excerpt is from <a target="_blank" href="https://en.wikipedia.org/wiki/Daniel_Quinn">
+								Daniel Quinn's</a> <a target="_blank" href="https://en.wikipedia.org/wiki/The_Story_of_B">The story of B</a>:</p>
 
-							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
+							<p style="color:#1472A8; margin-left:30px; margin-right:60px; font-style:italic;">"If you drop a frog in a pot of boiling water, 
+							   it will of course frantically try to clamber out. But if 
+							   you place it gently in a pot of tepid water and turn the heat on low, it will float there quite placidly. 
+							   As the water gradually heats up, the frog will sink into a tranquil stupor, exactly like one of us in a hot bath, 
+							   and before long, with a smile on its face, it will unresistingly allow itself to be boiled to death."</p>
+								<image src="../images/scientific_consensus_post.jpg" style="margin-top:4px; margin-bottom:10px; margin-left:20px; float:right;">   
 
-							<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus. Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis. Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit libero. </p>
+							<p>Historically, climate change, has been largely characterized as a slow and incremental process. We might be excused, therefore, for ignoring or
+								disputing climatic changes such as temperature and CO2 elevations over the past 250 years. What is inexcusable, however, is choosing to disregard 
+								a virtual consensus (<a target="_blank" href="https://www.skepticalscience.com/global-warming-scientific-consensus-intermediate.htm">97%</a>) amongst 
+								our subject matter experts (climate scientists).</p>
+
+							<p>Would you choose to disregard your doctor's diagnosis and recommended treatment if you or your family were critically ill? Would you rely on 
+							   the opinions of amateurs, laymen and other non-professionals (such as politicians)? Would you not instead seek your doctor's professional expertise, 
+							   skills and experience? With so much at stake, you might want a second or third opinion because even experts are sometimes mistaken. 
+							   With the supporting expert opinions, you could make the best treatment decision possible.</p>
+								
+							<p>Recognizing and mitigating climate change deserves similar objectivity and subject matter expertise. In fact, even more so, as the decision making 
+							   (or lack thereof) impacts not just yourself, but your family, neighbors, country and our global community. Choosing to dismiss the shared conclusions 
+							   and recommendations of virtually <a target="_blank" href="https://climate.nasa.gov/scientific-consensus/">all scientific professionals and organizations</a>
+							   constitutes wilful ignorance and, arguably, civil and criminal negligence.</p>
+
+							<p>This site does not reiterate arguments for man-made climate change. There are many sites (see landing page) providing compelling scientific evidence and 
+							   expert testimony that man is driving and accelerating climate change. Instead, this site moves beyond the argument and targets individuals and organizations 
+							   seeking strategies and actions to hold our educators, politicians, corporations and governments accountable for current and future climate policy. To hold
+							   today's decision-makers accountable for the growing climate consequences that will be borne by our children and grandchildren. 
+							</p>
+							<br /><br />
+							<header class="align-center">
+									<p>Victor Frankl</p>
+									<h3>When we are no longer able to change a situation, we are<br />challenged to change ourselves</h3>
+							</header>
+
 						</div>
 					</div>
 				</div>
