--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="moving-on.html">Moving on</a></li>
-					<li><a href="accountability.html">Accountability</a></li>
-					<li><a href="liability.html">Liability</a></li>
-					<li><a href="criminality.html">Criminality</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="moving-on.html">Moving on</a></li>
+						<li><a href="accountability.html">Accountability</a></li>
+						<li><a href="wilful-ignorance.html">Wilful ignorance</a></li>
+						<li><a href="negligence.html">Failure to act</a></li>
+						<li><a href="government-policy.html">Government policy</a></li>
+						<li><a href="effect-change.html">Effecting change</a></li>
+						<li><a href="references.html">References</a></li>
 				</ul>
 			</nav>
 
