--- a/references.html
+++ b/references.html
@@ -24,11 +24,14 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="moving-on.html">Moving on</a></li>
-					<li><a href="accountability.html">Accountability</a></li>
-					<li><a href="liability.html">Liability</a></li>
-					<li><a href="criminality.html">Criminality</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="moving-on.html">Moving on</a></li>
+						<li><a href="accountability.html">Accountability</a></li>
+						<li><a href="wilful-ignorance.html">Wilful ignorance</a></li>
+						<li><a href="negligence.html">Failure to act</a></li>
+						<li><a href="government-policy.html">Government policy</a></li>
+						<li><a href="effect-change.html">Effecting change</a></li>
+						<li><a href="references.html">References</a></li>
 				</ul>
 			</nav>
 
@@ -36,8 +39,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Criminality</p>
-						<h2>Wilful Scientific Ignorance</h2>
+						<p>Knowledge is Power</p>
+						<h2>Resources to Educate, Embolden and Empower</h2>
 					</header>
 				</div>
 			</section>
@@ -48,9 +51,12 @@
 					<div class="box">
 						<div class="content">
 							<header class="align-center">
-								<p>The case for civil  and criminal responsibility</p>
-								<h2>Polictical and Corporate Accountability</h2>
+								<p>Prerak Trivedi</p>
+								<h3>Knowledge is not the thing to boast or to brag!<br />
+									It's about how you can make influence on lives without uttering a single word.
+								</h3>
 							</header>
+							<br /><br />
 							<p>Coming soon.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
 
