--- a/government-policy.html
+++ b/government-policy.html
@@ -39,8 +39,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Accountability</p>
-						<h2>Political, Corporate and Educational Accountability</h2>
+						<p>Government Policy</p>
+						<h2>Environment and Climate Policies</h2>
 					</header>
 				</div>
 			</section>
@@ -51,8 +51,10 @@
 					<div class="box">
 						<div class="content">
 							<header class="align-center">
-								<p>Mahatma Gandhi</p>
-								<h2>It is wrong and immoral to seek to escape the consequences of one's acts.</h2>
+								<p>William E. Gladstone</p>
+								<h3>When there’s a vacuum of public input, lobbyists usually fill it. But when<br />
+									there’s public input, the people usually win.
+								</h3>
 							</header>
 							<br /><br />
 							<p>Coming soon.</p>
@@ -61,14 +63,6 @@
 							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
 
 							<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus. Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis. Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit libero. </p>
-						
-							<br /><br />
-
-							<header class="align-center">
-									<p>Dietrich Bonhoeffer</p>
-									<h3>Action springs not from thought, but from a readiness for responsibility.</h3>
-								</header>
-
 						</div>
 					</div>
 				</div>
