--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a><span class="tagline">&nbsp;&nbsp;“The hardest thing to explain is the glaringly evident which everybody has decided not to see.” ― Ayn Rand</span></div>
+				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
+					<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -174,17 +175,20 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+					<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
 				<div class="container">
-					<ul class="icons">
+					<ul style="margin-bottom:10px;" class="icons">
 						<li><a href="http://boiledfrog.ca" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="http://boiledfrog.ca" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="http://boiledfrog.ca" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:admin@boiledfrog.ca?Subject=Boiled Frog" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
+			
 				<div class="copyright">
-					&copy; Boiled Frog &#9400;2019 All rights reserved.
+					Boiled Frog &copy;2019 All rights reserved
 				</div>
+				
 			</footer>
 
 		<!-- Scripts -->
