--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 		<meta name="keywords" content="environment, climate, change, global, warming, greenhouse, enhanced, effect, accountability, criminality, cuplability, IPCC, NASA">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-58191121-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-58191121-1');
+		</script>
+
 	</head>
+	
 	<body>
 
 		<!-- Header -->
@@ -150,22 +162,22 @@
 					<div class="gallery">
 						<div>
 							<div class="image fit">
-								<a target="_blank" href="https://climate.nasa.gov/evidence"><img src="images/website-4.jpg" alt="NASA Climate Change Website" /></a>
+								<a target="_blank" href="https://climate.nasa.gov/evidence"><img class="borders" src="images/website-4.jpg" alt="NASA Climate Change Website" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a target="_blank" href="http://www.climatecentral.org/"><img src="images/website-2.jpg" alt="Climate Central Website" /></a>
+								<a target="_blank" href="http://www.climatecentral.org/"><img class="borders" src="images/website-2.jpg" alt="Climate Central Website" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a target="_blank" href="https://www.skepticalscience.com/"><img src="images/website-3.jpg" alt="Skeptical Science Website" /></a>
+								<a target="_blank" href="https://www.skepticalscience.com/"><img class="borders" src="images/website-3.jpg" alt="Skeptical Science Website" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a target="_blank" href="https://royalsociety.org/~/media/Royal_Society_Content/policy/projects/climate-evidence-causes/climate-change-evidence-causes.pdf"><img src="images/document-1.jpg" alt="" /></a>
+								<a target="_blank" href="https://royalsociety.org/~/media/Royal_Society_Content/policy/projects/climate-evidence-causes/climate-change-evidence-causes.pdf"><img class="borders" src="images/document-1.jpg" alt="" /></a>
 							</div>
 						</div>
 					</div>
