--- a/generic.html
+++ b/generic.html
@@ -30,8 +30,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo">Boiled Frog</div>
-				<a href="#menu">Menu</a>
+					<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
+						<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
+					<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
