--- a/references.html
+++ b/references.html
@@ -29,8 +29,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a><span class="tagline">&nbsp;&nbsp;“The hardest thing to explain is the glaringly evident which everybody has decided not to see.” ― Ayn Rand</span></div>
-				<a href="#menu">Menu</a>
+					<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
+						<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
+					<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
