--- a/Site Template/generic.html
+++ b/Site Template/generic.html
@@ -1,37 +1,21 @@
 <!DOCTYPE HTML>
 <!--
-	Boiled Frog - Climate Change Awareness and Strategy
-	Ian D James
+	Hielo by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
 	<head>
-		<title>Boiled Frog Website</title>
-		<meta name="description" content="Climate Change Criminality">
-		<meta name="author" content="Ian James">
+		<title>Hielo by TEMPLATED</title>
 		<meta charset="utf-8" />
-		<meta name="keywords" content="environment, climate, change, global, warming, greenhouse, enhanced, effect, accountability, criminality, cuplability, IPCC, NASA">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-58191121-2"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-58191121-2');
-		</script>
-
-
 	</head>
-
 	<body class="subpage">
 
 		<!-- Header -->
-		<header id="header">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
-					<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
+			<header id="header">
+				<div class="logo"><a href="index.html">Hielo <span>by TEMPLATED</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -39,8 +23,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="moving-on.html">Moving on</a></li>
-					<li><a href="criminality.html">Criminality</a></li>
+					<li><a href="generic.html">Generic</a></li>
+					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
 
@@ -48,8 +32,8 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Time is of the Essence</p>
-						<h2>Moving Beyond the Argument</h2>
+						<p>Eleifend vitae urna</p>
+						<h2>Generic Page Template</h2>
 					</header>
 				</div>
 			</section>
