--- a/accountability.html
+++ b/accountability.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
- />		<title>Boiled Frog</title>
+ 		<title>Boiled Frog</title>
 		<meta name="description" content="Climate Change Criminality">
 		<meta name="author" content="Ian James">
 		<meta charset="utf-8" />
@@ -29,9 +29,10 @@
 	<body class="subpage">
 
 		<!-- Header -->
-		<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
-			<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
-		<a href="#menu">Menu</a>
+		<header id="header">
+				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
+					<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
+				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
