--- a/Site Template/elements.html
+++ b/Site Template/elements.html
@@ -1,37 +1,21 @@
 <!DOCTYPE HTML>
 <!--
-	Boiled Frog - Climate Change Awareness and Strategy
-	Ian D James
+	Hielo by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
 	<head>
-		<title>Boiled Frog Website</title>
-		<meta name="description" content="Climate Change Criminality">
-		<meta name="author" content="Ian James">
+		<title>Hielo by TEMPLATED</title>
 		<meta charset="utf-8" />
-		<meta name="keywords" content="environment, climate, change, global, warming, greenhouse, enhanced, effect, accountability, criminality, cuplability, IPCC, NASA">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-58191121-2"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-58191121-2');
-		</script>
-
-
 	</head>
-
 	<body class="subpage">
 
 		<!-- Header -->
-		<header id="header">
-				<div class="logo"><a href="http://boiledfrog.ca">Boiled Frog</a>&nbsp;&nbsp;&nbsp;
-					<span class="tagline">“global warming is not a future threat - it's a present reality” ― Bill McKibben</span></div>
+			<header id="header">
+				<div class="logo"><a href="index.html">Hielo <span>by TEMPLATED</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
