--- a/generic.html
+++ b/generic.html
@@ -75,6 +75,7 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+				<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
 				<div class="container">
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -84,7 +85,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					Boiled Frog &copy;2019 All rights reserved
 				</div>
 			</footer>
 
