--- a/wilful-ignorance.html
+++ b/wilful-ignorance.html
@@ -83,6 +83,7 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+				<span class="security"><a target="_blank" href="https://www.rapidssl.com"><img src="images/RapidSSL.png" /></a></span>
 				<div class="container">
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -92,7 +93,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					Boiled Frog &copy;2019 All rights reserved
 				</div>
 			</footer>
 
